# composer

./: CMakeLists.txt
examples/: CMakeLists.txt  audio.cpp  play_midi.cpp
source/: CMakeLists.txt
source/composermidi/: midi_io.cpp  midi_io.h  midi_processor.h  synth.cpp
standalone/gui/: CMakeLists.txt
tests/benchmarks/: melody_benchmark.cpp
tests/unit_tests/: CMakeLists.txt  ut_midi_stream.cpp
